@@ -81,7 +81,7 @@
     <sonar.issue.ignore.multicriteria.S1117.ruleKey>java:S1117</sonar.issue.ignore.multicriteria.S1117.ruleKey>
     <sonar.issue.ignore.multicriteria.S1117.resourceKey>**/src/test/**/*.java</sonar.issue.ignore.multicriteria.S1117.resourceKey>
 
-    <surefireArgLine>-Xmx2024m</surefireArgLine>
+    <surefireArgLine>-Xmx2024m -Dnet.bytebuddy.experimental=true</surefireArgLine>
 
     <jrebel-maven-plugin.version>1.1.6</jrebel-maven-plugin.version>
     <maven-war-plugin.version>3.5.1</maven-war-plugin.version>
@@ -1937,6 +1937,7 @@
           <version>${maven-surefire-plugin.version}</version>
           <configuration>
             <excludedGroups>benchmark</excludedGroups>
+            <argLine>@{argLine} ${surefireArgLine}</argLine>
           </configuration>
         </plugin>
         <plugin>
